# WARNING: head commit changed in the meantime
Merge remote-tracking branch 'origin/xiangjianbo' into xiangjianbo1

--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -333,9 +333,9 @@
 			function hide_xm(th) {
 				$("#xm_tc").css("display", "none");
 				var show_xm_length = $("#show_xm_table").find("tr").length;
-				if(show_xm_length == 1) {
+				/* if(show_xm_length == 1) {
 					$("#show_xm").hide();
-				}
+				} */
 			}
 		</script>
 	</body>
