--- a/src/main/resources/templates/JJ_customer.html
+++ b/src/main/resources/templates/JJ_customer.html
@@ -111,7 +111,7 @@
 									<th scope="col">员工姓名</th>
 									<th scope="col">员工类型</th>
 									<th scope="col">员工性别</th>
-									<!-- <th scope="col">打卡次数</th> -->
+									<th scope="col">状态</th>
 									<th scope="col">详情</th>
 									<th scope="col">操作</th>
 								</tr>
@@ -125,8 +125,13 @@
 										th:text="${item.plist.postion}"></b>
 									</td>
 									<td><b>男</b></td>
-<!-- 
-									<td><b th:text="${item.slist.staffid}"> </b></td> -->
+									<td><b th:if="${item.state==0}" th:text="在职">
+									
+									</b>
+									<b th:if="${item.state==1}" th:text="离职" style="color: red">
+									
+									</b>
+									</td>
 									<td><b> <a href="#" data-target="#JJ_tan"
 											data-toggle="modal" class="tm-product-delete-link JJ_xiang">
 												<i class="fa fa-info"></i>
@@ -157,7 +162,8 @@
 	<script th:src="@{/js/tooplate-scripts-cy.js}"></script>
 	<script>
 		$(function() {
-			$(".h").hide();
+			$(".sc").hide();
+			$(".JJ_sc").hide();
 			$(".JJ_xiang").click(function() {
 			var h = $(this).parent().parent().parent().find(".uids").html();
 					$(".appe").html("");
@@ -229,8 +235,8 @@
 								type : "POST",
 								dataType : "json",
 								contentType : "application/json;charset=utf-8",
-								success:function(data){
-									console.log(data);
+								success:function(data1){
+									console.log(data1);
 									alert("录入成功 !")
 								}
 							})
@@ -242,11 +248,24 @@
 							$(".JJ_sc").show();
 							$(".JJ_plsc").hide();
 							})
+							
 							$(".JJ_sc").click(function(){
 								var ids=$(".sc").val();
 							})
-							$(".sc").hide();
-							$(".JJ_sc").hide();
+							
+							$(".JJ_delete").click(function(){
+								var h = $(this).parent().parent().parent().find(".uids").html();
+								alert(h);
+								$.ajax({
+									url:"/staff/staffupdate?id="+h,
+									type : "POST",
+									dataType : "json",
+									contentType : "application/json;charset=utf-8",
+									success:function(data2){
+										alert("离职成功!");
+									}
+								})
+							})
 					
 		})
 	</script>
