--- a/src/main/resources/templates/edit-product.html
+++ b/src/main/resources/templates/edit-product.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>活动设置</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
-		<!-- https://fonts.google.com/specimen/Roboto -->
-		<link rel="stylesheet" href="css/fontawesome.min.css" />
-		<!-- https://fontawesome.com/ -->
-		<link rel="stylesheet" href="jquery-ui-datepicker/jquery-ui.min.css" type="text/css" />
-		<!-- http://api.jqueryui.com/datepicker/ -->
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<!-- https://getbootstrap.com/ -->
-		<link rel="stylesheet" href="css/templatemo-style.css">
+		<link rel="stylesheet" th:href="@{/css/fontawesome.min.css}"/>
+		<link rel="stylesheet" th:href="@{/jquery-ui-datepicker/jquery-ui.min.css}" type="text/css" />
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
 
 		<style>
 			#hide_ry span,
@@ -63,15 +58,15 @@
 						</div>
 
 					</div>
-					<div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
+					<!-- <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
 						<div class="tm-product-img-edit mx-auto">
 							<img src="img/product-image.jpg" alt="Product image" class="img-fluid d-block mx-auto">
 							<i class="fas fa-cloud-upload-alt tm-upload-icon" onclick="document.getElementById(" fileInput ').click();"
                   ></i>
-                </div>
-                <div class="custom-file mt-3 mb-3">
+                </div> -->
+                <!-- <div class="custom-file mt-3 mb-3">
                   <input id="fileInput" type="file" style="display:none;" />
-                </div>
+                </div> -->
               </div>
               <div id="show_xm" class="col-12">
 				              <h5 style="color: white;">
@@ -194,8 +189,8 @@
         </div>
       </div>
     </div>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="jquery-ui-datepicker/jquery-ui.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
+    <script th:src="@{/jquery-ui-datepicker/jquery-ui.min.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
   </body>
 </html>
