--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -41,9 +41,9 @@
 	                <tbody>
 	                  <tr th:each="item : ${list}">
 	                    <th scope="row"><input type="checkbox" /></th>
-	                    <td class="tm-product-name" th:id="${item.id}" th:text="${item.pname}"></td>
+	                    <td class="tm-product-name" th:id="${item.id}"><a href="look_productxq" th:text="${item.pname}" style="color:white;"></a></td>
 	                    <td>
-	                    	<a href="javascript:void(0)" style="font-size: 20px" onclick="look_project(this)">→</a>
+	                    	<a href="javascript:void(0)" style="font-size: 20px" onclick="look_project(this)">项目 →</a>
 	                    </td>
 	                    <td>
 	                      <a href="#" class="tm-product-delete-link">
@@ -61,7 +61,7 @@
 	              class="btn btn-primary btn-block text-uppercase mb-3">新增活动</a>
 	            <button class="btn btn-primary btn-block text-uppercase">
 	            	删除活动
-	            </button>
+	            </button>	
 	          </div>
 	        </div>
 	        <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 tm-block-col">
