--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -42,7 +42,7 @@
                 <tbody>
                   <tr th:each="item : ${list}">
                     <th scope="row"><input type="checkbox" /></th>
-                    <td class="" th:id="${item.id}"><a th:href="@{toproject_xq}" style="color: white;" th:text="${item.pname}"></a></td>
+                    <td class="" th:id="${item.id}"><a th:href="@{toproject_xq(id=${item.id})}" style="color: white;" th:text="${item.pname}"></a></td>
                     <td th:text="${item.use.uname}"></td>
                     <td th:text="${item.createtime}"></td>
                     <td>
@@ -101,13 +101,13 @@
 	      		type:"post",
 	      		dataType:"json",
 	      		success:function(result){
-	      			console.log(result.alist);
+	      			console.log(result);
 	      			$("#xm_show").html("");
 	      			$.each(result,function(i,obj){
 	      				var dt=$("<table class='table tm-table-small tm-product-table'>"+
 				        	        "<tbody>"+
 					                  "<tr>"+
-					                    "<td class='tm-product-name'></td>"+
+					                    "<td class='tm-product-name'>"+obj.area.aname+"</td>"+
 					                    "<td class='text-center'>"+
 					                      "<a href='#' class='tm-product-delete-link'>"+
 					                        "<i class='far fa-trash-alt tm-product-delete-icon'></i>"+
